--- a/frontend/src/components/Logo.css
+++ b/frontend/src/components/Logo.css
@@ -7,6 +7,8 @@
 }
 
 .logo img {
-    max-width: 1500px;
+    max-width: 300px;
     height: auto;
+    padding-top: 50px;
+    padding-bottom: 50px;
 }
