add sync animation for auto save, and add kickoff time to Matches table

--- a/frontend/src/components/Home.module.css
+++ b/frontend/src/components/Home.module.css
@@ -55,6 +55,13 @@
   border-radius: 8px;
 }
 
+.kickoffTime {
+  font-size: 7px; /* Smaller font size for kickoff time */
+  color: grey;
+  text-align: center;
+  margin: 1px 0; /* Adjust spacing as needed */
+}
+
 .team {
   display: flex;
   align-items: center; /* Vertically align the logo and name */
