--- a/frontend/src/components/SyncIcon.module.css
+++ b/frontend/src/components/SyncIcon.module.css
@@ -1,33 +1,35 @@
 .syncIcon {
-    position: absolute;
-    top: 40px; /* Below the h4 element */
-    left: 10px;
-    display: flex;
-    align-items: center;
+  position: absolute;
+  top: 40px; /* Adjust as needed */
+  left: 10px; /* Adjust as needed */
+  display: flex;
+  align-items: center;
+  justify-content: center; /* Center content horizontally */
+}
+
+.spinner {
+  border: 2px solid #f3f3f3; /* Light grey */
+  border-top: 2px solid #607d8b; /* Grey */
+  border-radius: 50%;
+  width: 16px;
+  height: 16px;
+  animation: spin 1s linear infinite;
+}
+
+.success {
+  color: rgb(43, 178, 43);
+  font-size: 10px;
+  font-weight: bold;
+  font-family: Arial, Helvetica, sans-serif;
+  opacity: 1;
+  white-space: nowrap; /* Ensure the text doesn't break */
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
   }
-  
-  .spinner {
-    border: 2px solid #f3f3f3; /* Light grey */
-    border-top: 2px solid #607d8b; /* Grey */
-    border-radius: 50%;
-    width: 16px;
-    height: 16px;
-    animation: spin 1s linear infinite;
+  100% {
+    transform: rotate(360deg);
   }
-  
-  .success {
-    color: green;
-    margin-left: 8px;
-    font-size: 14px;
-    font-weight: bold;
-  }
-  
-  @keyframes spin {
-    0% {
-      transform: rotate(0deg);
-    }
-    100% {
-      transform: rotate(360deg);
-    }
-  }
-  
+}
