--- a/frontend/src/components/Home.module.css
+++ b/frontend/src/components/Home.module.css
@@ -49,7 +49,7 @@
   justify-content: space-between;
   width: 100%; /* Ensure the match items take the full width */
   max-width: 400px; /* Optionally limit the max width for better centering */
-  padding: 7px; /* Reduce padding */
+  padding: 5px; /* Reduce padding */
   margin: 4px 0; /* Center the match elements inside the container with minimal spacing */
   background-color: #cfd8dc;
   border-radius: 8px;
@@ -59,7 +59,7 @@
   font-size: 7px; /* Smaller font size for kickoff time */
   color: grey;
   text-align: center;
-  margin: 1px 0; /* Adjust spacing as needed */
+  margin: 0;
 }
 
 .team {
